--- a/README.Rmd
+++ b/README.Rmd
@@ -32,4 +32,4 @@ library(rPACENIR)
 
 ## Utilisation
 
-Le package rPACENIR est conçu pour importer et traiter les donnees NIR, issues du setup du CEFE (UMR 5175) de Montpellier ...
+Le package rPACENIR est conçu pour importer et traiter les donnees NIR, issues du setup du CEFE (UMR 5175) de Montpellier.
